Fix z-index conflict

--- a/resources/css/list.pcss
+++ b/resources/css/list.pcss
@@ -23,7 +23,7 @@
   bottom: 2vh;
   background: #f36cb5;
   padding: 5px;
-  z-index: 50;
+  z-index: 1;
 }
 
 .featured-video__thumbnail {
@@ -107,7 +107,7 @@
 .videos__navigation.slick-prev {
   border: 1px solid black;
   background: #f36cb5;
-  z-index: 100;
+  z-index: 1;
   right: 0;
 }
 
