--- a/resources/css/search.pcss
+++ b/resources/css/search.pcss
@@ -4,7 +4,7 @@
   justify-content: center;
   position: absolute;
   padding: 4em 0;
-  z-index: 1;
+  z-index: 2;
   background-color: #fff;
   background-image: url(/assets/images/icons/grate.svg);
   background-repeat: repeat;
